--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,11 +1,13 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-
+@font-face {
+    font-family: cabin;
+    src: url("../Fonts/cabin.regular.ttf");
+}
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'cabin', sans-serif;
 }
 
 #output {
