--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -16,6 +16,20 @@ html, body {
 }
 
 .magicalCard{
+
+}
+
+.adventureButton{
+    background-color: #ffe2f8;
+    border: 3px solid #fdbee5;
+    border-radius: 5px;
+    padding: 5px;
+  font-family: 'cabin', sans-serif;
+  color: #ef9ace;
+
+}
+
+.girlContainer{
     display: inline-block;
     margin:10px;
 }
