--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -29,6 +29,22 @@ html, body {
 
 }
 
+.adventurePopup{
+    border: 3px solid #fdbee5f;
+    background-color: #ffe2f8;
+    padding: 25px;
+    text-align: left;
+    font-size: 18px;
+    font-family: 'cabin', sans-serif;
+    position: absolute;
+    box-shadow: 0px 3px 13px #ef9ace;
+    top: 25%;
+    color: #ef9ace;
+    left: 25%;
+    border-radius: 13px;
+    z-index: 10;
+}
+
 .girlContainer{
     display: inline-block;
     margin:10px;
