--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -28,6 +28,15 @@ html, body {
   color: #ef9ace;
 
 }
+.portrait{
+    border: 3px solid #fdbee5;
+    float: left;
+    margin:10px;
+}
+
+.adventureContent{
+    padding:10px;
+}
 
 .adventurePopup{
     border: 3px solid #fdbee5f;
@@ -38,11 +47,13 @@ html, body {
     font-family: 'cabin', sans-serif;
     position: absolute;
     box-shadow: 0px 3px 13px #ef9ace;
-    top: 25%;
+    top: 5%;
     color: #ef9ace;
     left: 25%;
     border-radius: 13px;
     z-index: 10;
+    width: 500px;
+    height: 500px;
 }
 
 .girlContainer{
