--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -32,14 +32,27 @@ button{
     float: left;
     margin:10px;
 }
+.tabs{
+    text-align:left;
+}
 .tab{
     width:1000px;
+     background-color: #ffe2f8;
+    border: 3px solid #fdbee5;
+    border-top:none;
 }
 .tabButton{
+    background-color: #ecd1e6;
+    border-radius: 0px;
+    border: 3px solid #efb3d8;
 }
 
+
 .tabButtonSelected{
+    border: 3px solid #fdbee5;
     border-bottom: none;
+    background-color: #ffe2f8;
+    vertical-align: bottom;
 }
 .adventureContent{
     padding:10px;
