--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -5,6 +5,7 @@
 html, body {
   width: 100%;
   height: 100%;
+  background-color: #fff0f9;
   margin: 0;
   padding: 0;
   font-family: 'cabin', sans-serif;
@@ -13,6 +14,12 @@ html, body {
 #output {
   padding: 20px;
   text-align: center;
+}
+.money{
+    text-align: left;
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .magicalCard{
