more or less menus stable, just have bit of flavor text

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -76,6 +76,13 @@ html, body {
     display: none;
 }
 
+.bloodMenu2{
+    left: 690px;
+    width: 575px;
+    display: none;
+}
+
+
 #output {
   padding: 20px;
   text-align: center;
