--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -11,11 +11,31 @@ html, body {
   font-family: 'cabin', sans-serif;
 }
 
+.healthBar{
+    width: 1280px;
+    height: 50px;
+    position: relative;
+    background-color: #fdbee5;
+    color: #fff0f9;
+    font-size: 39px;
+}
+
+.girlHP{
+    display: inline-block;
+    position: absolute;
+    left: 100px;
+}
+
+.monsterHP{
+   display: inline-block;
+   position: absolute;
+   left: 950px;
+}
+
 .gameBox{
     background: url('../images/BGs/cityscape.png');
     width: 1280px;
     height: 720px;
-    background-color: #ff0000;
     position: relative;
 }
 
