--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -15,7 +15,7 @@ html, body {
     width: 1280px;
     height: 50px;
     position: relative;
-    background-color: #fdbee5;
+    background-color: #eb7cc1; /*#fdbee5;*/
     color: #fff0f9;
     font-size: 39px;
 }
@@ -37,12 +37,13 @@ html, body {
     width: 1280px;
     height: 720px;
     position: relative;
+    overflow:hidden;
 }
 
 .bloodDoll{
     position: absolute;
     top: 147px;
-    left: 3px;
+    left: 125px;
 }
 
 .monsterDoll{
@@ -69,7 +70,7 @@ html, body {
     font-size: 39px;
     width: 100%;
     text-align: center;
-    background-color: #fdbee5;
+    background-color: #eb7cc1; /*#fdbee5;*/
     color: #fff0f9;
 }
 
@@ -91,7 +92,7 @@ html, body {
 
 
 .menuItem:hover{
-    background-color: #fdbee5;
+    background-color: #eb7cc1; /*#fdbee5;*/
     color: #fff0f9;
 
 }
@@ -99,7 +100,7 @@ html, body {
 
 
 .menuHolder{
-    border: 3px solid #fdbee5;
+    border: 3px solid #eb7cc1; /*#fdbee5;*/
     position: absolute;
     bottom: 10px;
     left: 10px;
@@ -109,7 +110,7 @@ html, body {
     height: 288px;
     vertical-align: top;
     font-family: 'cabin', sans-serif;
-    color: #fdbee5;
+    color: #eb7cc1; /*#fdbee5;*/
     display: inline-block;
     border-radius: 13px;
     z-index: 10;
@@ -158,7 +159,7 @@ html, body {
 
 button{
     background-color: #ffe2f8;
-    border: 3px solid #fdbee5;
+    border: 3px solid #eb7cc1; /*#fdbee5;*/
     border-radius: 5px;
     padding: 5px;
     margin: 10px;
@@ -166,7 +167,7 @@ button{
   color: #ef9ace;
 }
 .portrait{
-    border: 3px solid #fdbee5;
+    border: 3px solid #eb7cc1; /*#fdbee5;*/
     float: left;
     margin:10px;
 }
@@ -176,7 +177,7 @@ button{
 .tab{
     width:1000px;
      background-color: #ffe2f8;
-    border: 3px solid #fdbee5;
+    border: 3px solid #eb7cc1; /*#fdbee5;*/
     border-top:none;
 }
 .tabButton{
@@ -188,7 +189,7 @@ button{
 
 
 .tabButtonSelected{
-    border: 3px solid #fdbee5;
+    border: 3px solid #eb7cc1; /*#fdbee5;*/
     border-bottom: none;
     background-color: #ffe2f8;
     vertical-align: bottom;
@@ -198,7 +199,7 @@ button{
 }
 
 .adventurePopup{
-    border: 3px solid #fdbee5f;
+    border: 3px solid #eb7cc1; /*#fdbee5;*/
     background-color: #ffe2f8;
     padding: 25px;
     text-align: left;
@@ -219,4 +220,15 @@ button{
     display: inline-block;
     margin:10px;
     position: relative;
+}
+
+.sunGlow {
+    width:2000px;
+    height:2000px;
+    position:absolute;
+    background-image: radial-gradient(circle closest-side, rgba(255,65,0,1.0) 0%, rgba(255,65,0,0.3) 10%, rgba(255,65,0,0.0) 100%);
+    top:175px;
+    left:88px;
+    mix-blend-mode: screen;
+    transform: translate(-50%,-50%);
 }
