--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -232,3 +232,13 @@ button{
     mix-blend-mode: screen;
     transform: translate(-50%,-50%);
 }
+
+#🐥 {
+    position:absolute;
+    background-image: url('../images/protagonist.png');
+    width:41px;
+    height:41px;
+    background-size:100% 100%;
+    top:340px;
+    left:120px;
+}
