--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -54,16 +54,25 @@ html, body {
     overflow:hidden;
 }
 
-.bloodDoll{
+.bloodDoll, .monsterDoll {
     position: absolute;
+    animation-iteration-count: infinite;
+    animation-name: bobbing;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+
+.bloodDoll{
     top: 147px;
     left: 125px;
+    animation-duration: 3.1s;
 }
 
 .monsterDoll{
-    position: absolute;
     top: 0px;
     right: 0px;
+    animation-duration: 4.3s;
+    animation-delay: -2.1s;
 }
 
 
@@ -249,6 +258,9 @@ button{
     top:175px;
     left:88px;
     mix-blend-mode: screen;
+
+    -ms-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 }
 
@@ -260,4 +272,17 @@ button{
     background-size:100% 100%;
     top:340px;
     left:120px;
+}
+
+@keyframes bobbing {
+    0% {
+        -ms-transform: translate(0,0);
+        -webkit-transform: translate(0,0);
+        transform: translate(0,0);
+    }
+    100% {
+        -ms-transform: translate(0,-2%);
+        -webkit-transform: translate(0,-2%);
+        transform: translate(0,-2%);
+    }
 }
