--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -113,6 +113,25 @@ html, body {
 
 }
 
+.attackpopup{
+   display: inline-block;
+   position: absolute;
+   left: 370px;
+   color: #fff0f9;
+   top: 80px;
+   z-index: 13;
+   box-shadow: 0px 3px 13px #000000;
+   background-color: #fff0f9;
+   width: 530px;
+   height: 288px;
+   vertical-align: top;
+   font-family: 'cabin', sans-serif;
+   color: #eb7cc1; /*#fdbee5;*/
+   font-size: 24px;
+   display: inline-block;
+   border-radius: 13px;
+}
+
 
 .menuItem:hover{
     background-color: #eb7cc1; /*#fdbee5;*/
