--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -119,15 +119,15 @@ html, body {
    left: 370px;
    color: #fff0f9;
    top: 80px;
+   padding: 15px;
    z-index: 13;
    box-shadow: 0px 3px 13px #000000;
    background-color: #fff0f9;
    width: 530px;
-   height: 288px;
    vertical-align: top;
    font-family: 'cabin', sans-serif;
    color: #eb7cc1; /*#fdbee5;*/
-   font-size: 24px;
+   font-size: 34px;
    display: inline-block;
    border-radius: 13px;
 }
