--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -383,6 +383,8 @@ button{
     -ms-transform: translate(-50%,-50%);
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
+
+    z-index:90;
 }
 
 .hit1 {
