--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -137,6 +137,25 @@ display: inline-block;
 
 }
 
+.cutscene{
+   position: absolute;
+   left: 370px;
+   color: #fff0f9;
+   top: 80px;
+   padding: 15px;
+   z-index: 100;
+   box-shadow: 0px 3px 13px #000000;
+   background-color: #fff0f9;
+   width: 1280px;
+   height: 800;
+   vertical-align: top;
+   font-family: 'cabin', sans-serif;
+   color: #eb7cc1; /*#fdbee5;*/
+   font-size: 34px;
+   display: inline-block;
+   border-radius: 13px;
+}
+
 .attackpopup{
    display: inline-block;
    position: absolute;
