--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -142,15 +142,15 @@ display: inline-block;
 
 .cutscene{
    position: absolute;
-   left: 370px;
+   left: 0px;
    color: #fff0f9;
-   top: 80px;
+   top: 0px;
    padding: 15px;
    z-index: 100;
    box-shadow: 0px 3px 13px #000000;
    background-color: #fff0f9;
    width: 1280px;
-   height: 800;
+   height: 720px;
    vertical-align: top;
    font-family: 'cabin', sans-serif;
    color: #eb7cc1; /*#fdbee5;*/
@@ -385,6 +385,23 @@ button{
     left:120px;
     z-index: 30;
 }
+
+.eggCutscene{
+    width: 100px;
+    left: 300px;
+    position: absolute;
+}
+
+.girlCutscene{
+    bottom: -100px;
+    position: absolute;
+}
+
+.🐥Cutscene{
+
+}
+
+
 
 @keyframes bobbing {
     0% {
