--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -150,7 +150,6 @@ display: inline-block;
 }
 .cutsceneText{
    background-color: #fff0f9;
-   padding: 15px;
    border-radius: 13px;
    border: 3px solid #eb7cc1;
 
@@ -345,7 +344,12 @@ button{
     margin:10px;
     position: relative;
 }
-
+.ending{
+    height: 650px;
+    overflow: hidden;
+    width: 1270px;
+    position: relative;
+}
 .sunGlow {
     width:2000px;
     height:2000px;
