--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -439,8 +439,10 @@ button{
 .ending{
     height: 650px;
     overflow: hidden;
-    width: 1270px;
-    position: relative;
+    width: 1248px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 .sunGlow {
     width:2000px;
