Cutscene text z-index

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -240,6 +240,7 @@ display: inline-block;
    border: 3px solid #eb7cc1;
    padding: 8px;
    box-shadow: 0 5px 14px rgba(0,0,0,0.7);
+   z-index:1000;
 }
 
 .cutscene{
