--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -234,6 +234,22 @@ display: inline-block;
     margin-top:5px;
 }
 
+.girlFightWrapper{
+    position: relative;
+}
+
+#battleGirlStats{
+    top: 220px;
+    height: 120px;
+    right: 700px;
+}
+
+#battleMonsterStats{
+    top: 220px;
+    height: 120px;
+    right: 5px;
+}
+
 .girlStats{
    background-color: #fff0f9;
    font-size: 18px;
@@ -245,6 +261,7 @@ display: inline-block;
    position: absolute;
    bottom: 100px;
    right: 50px;
+   color: #eb7cc1;
    z-index: 500;
 
 }
@@ -265,6 +282,28 @@ display: inline-block;
    padding: 8px;
    box-shadow: 0 5px 14px rgba(0,0,0,0.7);
    z-index:1000;
+}
+
+.twoOpt{
+    position: absolute;
+   box-sizing:border-box;
+   border: 6px solid #eb7cc1;
+   opacity: 0.9;
+   left: 400px;
+   color: #fff0f9;
+   top: 100px;
+   padding: 15px;
+   z-index: 1001;
+   background-color: #fff0f9;
+   width: 500px;
+   height: 300px;
+   vertical-align: top;
+   font-family: 'cabin', sans-serif;
+   color: #eb7cc1; /*#fdbee5;*/
+   font-size: 72px;
+   display: inline-block;
+   border-radius: 13px;
+   cursor:pointer;
 }
 
 .replayButton{
